<resources>
    <string name="app_name">Hercules</string>
    <string name="night_mode_shared_prefs">AppSettingPrefs</string>
    <string name="night_mode_boolean">NightMode</string>
    <string name="users">Users</string>
    <string name="email">email</string>
    <string name="companyName">companyName</string>
    <string name="phone">phone</string>
    <string name="id">id</string>
    <string name="address">address</string>
    <string name="pincode">pincode</string>
    <string name="state">state</string>
    <string name="contactName">contactName</string>
    <string name="contactNumber">contactNumber</string>
    <string name="gstin">gstin</string>
    <string name="discount">discount</string>
    <string name="password">password</string>
    <string name="ledger">Ledger</string>
    <string name="SOL">SOL</string>
    <string name="notif_title">title</string>
    <string name="notif_message">message</string>
    <string name="serverToken">serverToken</string>
    <string name="token">Tokens</string>
    <string name="status">status</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="category_gainer">gainer</string>
    <string name="category_protein">protein</string>
    <string name="category_pre">pre</string>
    <string name="category_builder">builder</string>
    <string name="category">category</string>
    <string name="position">position</string>
    <string name="orderid">orderid</string>
    <string name="orderDetails">orderDetails</string>
    <string name="firebase_request">Requests</string>
    <string name="firebase_new_orders">New Orders</string>
    <string name="firebase_orders">Orders</string>
    <string name="total">total</string>
    <string name="new_total">newTotal</string>
    <string name="ui_product_id">Product ID : </string>
    <string name="ui_servings">Servings : </string>
    <string name="ui_no_of_servings">No. of Servings : </string>
    <string name="ui_flavour">Flavour : </string>
    <string name="ui_description">Description</string>
    <string name="ui_quantity">Quantity</string>
    <string name="ui_nutritional_facts">Nutritional facts per 100g</string>
    <string name="ui_fat">Fat</string>
    <string name="ui_carbo">Carbo</string>
    <string name="ui_protein">Protein</string>
    <string name="ui_calories">Calories</string>
    <string name="ui_leucine">Leucine</string>
    <string name="ui_glutamine">Glutamine</string>
    <string name="ui_isoleucine">Isoleucine</string>
    <string name="ui_valine">Valine</string>
    <string name="your_cart">Your Cart</string>
    <string name="item_already_in_cart">This item is already in your cart !!</string>
    <string name="go_to_cart">Go to cart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="no_items_here">No Items Here !!</string>
    <string name="continue_with_email">Continue With Email</string>
    <string name="enter_email">Enter Email Address</string>
    <string name="enter_password">Enter your Password</string>
    <string name="ui_email_address">Email address</string>
    <string name="ui_password">Password</string>
    <string name="account_info">Account Info</string>
    <string name="button_continue">Continue</string>
    <string name="done">Done</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="request">Request</string>
    <string name="place_order">Place Order</string>
    <string name="ui_my_orders">My Orders</string>
    <string name="ui_order_details">Order Details</string>
    <string name="ui_order_id">Order ID: </string>
    <string name="ui_order_date">Order Date: </string>
    <string name="ui_order_status">Order Status : </string>
    <string name="ui_company_name">Company Name : </string>
    <string name="ui_email">Email : </string>
    <string name="ui_contact_name">Contact Name : </string>
    <string name="ui_contact_number">Contact Phone number : </string>
    <string name="ui_id">ID : </string>
    <string name="ui_phone_number">Phone number : </string>
    <string name="ui_address">Address</string>
    <string name="ui_pincode">Pincode : </string>
    <string name="ui_state">State : </string>
    <string name="ui_discount">Discount : </string>
    <string name="ui_gstin">GSTIN : </string>
    <string name="ui_items_ordered">Items Ordered : </string>
    <string name="ui_notes">Notes : </string>
    <string name="ui_total">Total : </string>
    <string name="ui_new_total">New Total : </string>
    <string name="view_full_order_details">View full order details</string>
    <string name="ui_cancel_text">Seller is processing your request to cancel this order</string>
    <string name="no_orders">No Orders</string>
    <string name="ui_order_confirmation">Confirmation</string>
    <string name="ui_order_confirmation_info">Company Name: %1$s \n\n
                ID: %2$s \n\n
                Phone: %3$s \n\n
                Email: %4$s \n\n
                Address: %5$s \n\n
                Pincode: %6$s \n\n
                State: %7$s \n\n
                Contact Name: %8$s \n\n
                Contact Number: %9$s \n\n
                Gstin: %10$s \n\n</string>
    <string name="ui_trading">Trading</string>
    <string name="ui_name_of_file">Name of file</string>
    <string name="ui_date">Date : </string>
    <string name="nothing_here">Nothing Here !!</string>
    <string name="ui_terms_and_conditions">Terms and Conditions</string>
    <string name="ui_shipping_and_delivery_policy">Shipping and Delivery Policy</string>
    <string name="ui_return_policy">Return Policy</string>
    <string name="ui_privacy_policy">Privacy Policy</string>
    <string name="ui_about_us">About Us</string>
    <string name="oh_no">Oh No!</string>
    <string name="no_internet">No internet connection. Check your network and try again</string>
    <string name="home">Home</string>
    <string name="loading">LOADING....</string>
    <string name="business_phone">9999531838</string>
    <string name="ui_category_mass_gainer">Mass Gainer</string>
    <string name="ui_category_muscle_builder">Muscle Builder</string>
    <string name="ui_category_protein">Protein</string>
    <string name="ui_category_pre_workout">Pre-Workout / Essentials</string>
    <string name="slider1_title">Workout Essentials</string>
    <string name="slider2_title">Wide Variety</string>
    <string name="slider3_title">Authenticity</string>
    <string name="slider1_info">Give an energy boost for your workout sessions</string>
    <string name="slider2_info">Search across a large variety of products</string>
    <string name="slider3_info">100% safe and authentic products</string>
    <string name="product_id">Product ID: %1$s</string>
    <string name="gram">%1$s g</string>
    <string name="kcal">%1$s Kcal</string>
    <string name="nutritional_facts">Nutritional Facts	Per %1$s g</string>
    <string name="discount_display">%1$f &#37;</string>
    <string name="terms">By proceeding, you agree to our Terms of service &amp; Privacy policy.</string>
    <string name="service_not_available">Service not available</string>
    <string name="invalid_lat_long_used">Invalid coordinates used</string>
    <string name="gps_should_be_enabled">GPS should be enabled to access this feature</string>
    <string name="get_current_location">Get current location</string>
    <string name="location_permission_denied">Permission denies</string>
    <string name="price">\u20B9 %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="gainer1_code">HT-H-012</string>
    <string name="gainer1_name">Hercules Body Grow 1.0 Kg / 2.2 Lbs</string>
    <string name="gainer1_price">1260</string>
    <string name="gainer1_flavour">Chocolate</string>
    <string name="gainer1_fat">3</string>
    <string name="gainer1_carbo">75</string>
    <string name="gainer1_proteins">20</string>
    <string name="gainer1_calories">403</string>
    <string name="gainer1_servings">20</string>
    <string name="gainer1_nutrional_facts">100</string>
    <string name="gainer1_multiplier">6</string>
    <string name="gainer1_desc"><b>Hercules Body Grow</b> is one of the first offerings from our erstwhile best-selling “Vintage series” from the house of Hercules!\n

\n<b>Muscle Weight Gain For “Hard-Gainers”-</b> A precisely formulated blend of fast and slow acting carbohydrates works towards imparting an anabolic pump to your muscles when taken in a pre-workout scenario helping you gain muscle weight in the shortest time.

Hercules Body Grow has a high quality Whey Concentrate and Soy Isolate Protein Blend which imparts a superior Amino Acid profile to your body post your workouts, providing you with extra quick recovery, spectacular Muscle Weight Gain and Muscle Growth by keeping your body into an anabolic state.

It contains a Scientifically Designed Digestive Enzyme Complex and Multivitamins which make sure your Muscles absorb and assimilate these extra Proteins and Calories. Hence making you Gain Muscle Weight at an astounding rate!

\n\n<b>Directions to take Hercules Body Grow -</b> Mix 1 scoop with milk or water. For best results ensure to take one serving before workout and one serving after workout. Add 2 bananas or 6-7 cookies/biscuits per serving to increase the calorific value of your shake.

        \n\n<b>Pre Workout- </b>One scoop of Hercules Body Grow taken in water 15 minutes before a workout/ taken in milk with 2 bananas 40 minutes before workout will impart a monstrous pump in your workouts whilst hardening your muscles and letting you dominate the weights.

        \n\n<b>Post Workout-</b> One scoop of Hercules Body Grow taken in water immediately after your workout will help drive the proteins and glycogen right into the belly of your tired muscles, enabling your “pump” to last longer and speeding up the recovery and muscle gaining process.

        \n\n<b>For Best Results-</b> Use Hercules Body Grow with safe and sensible but heavy lifting, done 3-4 times per week along with a generous intake of 4-5 solid meals spaced evenly throughout the day. Eat animal proteins like chicken, fish, eggs etc or dairy at least three times a day.

        \n\n<b>Ingredients :</b> Whey Protein Concentrate, Soy Protein Isolate, Maltodextrin, Dextrose Monohydrate, Sucrose, Calcium Phosphate ( INS282),Creatine Monohydrate, Xantham Gum (INS415), Sucralose, Tricalcium Phosphate, Alkalised Cocoa Powder, Vitamins &amp; Minerals Premix, Natural &amp; Artificial Flavours, Colours ( INS154, INS155),Anticaking Agent ( INS551).</string>
    <string name="gainer2_code">HT-H-013</string>
    <string name="gainer2_name">Hercules Body Grow 3.0 Kg / 6.6 Lbs</string>
    <string name="gainer2_price">3450</string>
    <string name="gainer2_flavour">Chocolate</string>
    <string name="gainer2_fat">3</string>
    <string name="gainer2_carbo">75</string>
    <string name="gainer2_proteins">20</string>
    <string name="gainer2_calories">403</string>
    <string name="gainer2_servings">60</string>
    <string name="gainer2_nutrional_facts">100</string>
    <string name="gainer2_multiplier">4</string>
    <string name="pre1_fat">0</string>
    <string name="pre1_carbo">4</string>
    <string name="pre1_proteins">0</string>
    <string name="pre1_calories">60.1</string>
    <string name="pre4_name">Hercules Volts Isotonic Drink 1.0 kg / 2.2 Lbs Pineapple Flavour</string>
</resources>