<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Home.HomeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/standard_margin">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:elevation="@dimen/cardview_default_elevation"
            app:cardBackgroundColor="@color/product_individual"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/product_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/standard_margin"
                        android:scaleType="fitCenter"
                        android:src="@drawable/pre1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="116dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/product_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/standard_margin"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="@dimen/standard_margin"
                            android:layout_marginBottom="8dp"
                            android:fontFamily="monospace"
                            android:text="@string/pre4_name"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/secondary_text"
                            android:textStyle="bold" />



                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/standard_margin"
                            android:layout_marginTop="@dimen/less_padding"
                            android:layout_marginEnd="@dimen/standard_margin"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ui_no_of_servings"
                                android:textAlignment="center"
                                android:textColor="@color/text_color"
                                android:textSize="@dimen/secondary_text"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_marginStart="@dimen/less_padding"
                                android:id="@+id/servings"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pre1_calories"
                                android:textColor="@color/colorPrimaryDark"
                                android:textSize="@dimen/secondary_text"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/product_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom"
                            android:layout_marginStart="@dimen/standard_margin"
                            android:layout_marginEnd="@dimen/standard_margin"
                            android:layout_marginBottom="@dimen/standard_margin"
                            android:gravity="bottom"
                            android:text="@string/price"
                            android:textColor="@color/green"
                            android:textSize="@dimen/modal_text"
                            android:textStyle="bold" />


                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="@dimen/less_padding"
                    android:layout_marginTop="@dimen/less_padding"
                    android:layout_marginEnd="@dimen/less_padding"
                    android:layout_marginBottom="@dimen/less_padding"
                    android:background="@color/text_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <TextView
                            android:id="@+id/fat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pre1_fat"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/secondary_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_fat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ui_fat"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/small_text" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text_color" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <TextView
                            android:id="@+id/carbo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pre1_carbo"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/secondary_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_carbo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ui_carbo"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/small_text" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text_color" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <TextView
                            android:id="@+id/proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pre1_proteins"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/secondary_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_proteins"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ui_protein"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/small_text" />
                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/text_color" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="4dp">

                        <TextView
                            android:id="@+id/calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/pre1_calories"
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="@dimen/secondary_text"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textview_calories"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ui_calories"
                            android:textColor="@color/text_color"
                            android:textSize="@dimen/small_text" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>


</LinearLayout>